# Low-Level-Design

./: README.md
Design-Pattern/: go.mod
Design-Pattern/Abstract Factory/Go/: adidas.go  iShoe.go  nikeShirt.go
Design-Pattern/Behavioral Patterns/: README.md
Design-Pattern/Behavioral Patterns/ChainOfResponsibility/: cashier.go  department.go  doctor.go  go.mod  main.go  medical.go  patient.go  reception.go
Design-Pattern/Behavioral Patterns/Iterator/: collection.go  iterator.go  user.go  userCollection.go  userIterator.go
Design-Pattern/Behavioral Patterns/Mediator/: freightTrain.go  go.mod  main.go  mediator.go  passengerTrain.go  stationManager.go
Design-Pattern/Behavioral Patterns/Memento/: caretaker.go  go.mod  memento.go  originator.go
Design-Pattern/Behavioral Patterns/Observer/: customer.go  go.mod  item.go  subject.go
Design-Pattern/Behavioral Patterns/Strategy/: cache.go  evictionAlgo.go  fifo.go  go.mod  lfu.go  lru.go
Design-Pattern/Behavioral Patterns/Template/: otp.go
Design-Pattern/Behavioral Patterns/Visitor/: go.mod  (+6 more)
Design-Pattern/Creational Patterns/: README.md
Design-Pattern/Singleton/: CallOnceSingleton.cc  LazySingleton.h  ThreadSafeSingleton.h  singleton.md
Design-Pattern/Structural Patterns/: README.md
Problems/: atm.md  coffee-vending-machine.md  loggingframework.md  parking-lot.md  stack-overflow.md  task-management-system.md  traffic-signal.md  vending-machine.md
Solutions/cpp/parkinglot/: CMakeLists.txt  Makefile  ParkingLot.cc  ParkingLot.h  ParkingSpot.cc  ParkingSpot.h  README.md  Vehicle.cc  Vehicle.h  demo.cc
(+184 files in other folders)
